--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -11,5 +11,20 @@ user.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
 user.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
 
 meal.title=\u041C\u043E\u044F \u0435\u0434\u0430
+meal.DateTime=\u0414\u0430\u0442\u0430
+meal.Description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+meal.Calories=\u041A\u0430\u043B\u043B\u043E\u0440\u0438\u0438
+meal.Save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+meal.Cancel=\u041E\u0442\u043C\u0435\u043D\u0430
+
+meals.Meals=\u041F\u0440\u0438\u0435\u043C \u043F\u0438\u0449\u0438
+meals.FromDate=\u041E\u0442
+meals.ToDate=\u0414\u043E
+meals.FromTime=\u0412\u0440\u0435\u043C\u044F \u043E\u0442
+meals.ToTime=\u0412\u0440\u0435\u043C\u044F \u0434\u043E
+meals.Filter=\u0424\u0438\u043B\u044C\u0442\u0440
+meals.AddMeal=\u0414\u043E\u0431\u0430\u0432\u0442\u044C \u0435\u0434\u0443
+meals.Update=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+meals.Delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 
 common.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
